--- a/annexe/IESM.tex
+++ b/annexe/IESM.tex
@@ -1,7 +1,7 @@
 \chapter{A batch sizing and scheduling problem on parallel machines with
 different speeds, maintenance operations, setup times and energy
 costs}
-\chaptermark{Papier IESM}
+\chaptermark{A batch sizing and scheduling problem}
 \label{ann:IESM}
 
 This paper considers a production scheduling problem in a Chilean
@@ -949,8 +949,7 @@ develop column generation procedures.
 This work was funded by ECOS--CONICYT French-Chile cooperation program
 C13E04.
 
-\section*{Bibliography}
-\sectionmark{Bibliography}
+\section*{Bibliography\markboth{}{BIBLIOGRAPHY}}
 \begin{bibunit}[alpha]
 \nocite{IESM}
 \nocite*
