--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,4 @@
-\chapter*{Introduction\markboth{INTRODUCTION}{}}
+e\chapter*{Introduction\markboth{INTRODUCTION}{}}
 
 De nos jours, de nombreuses tâches, auparavant fastidieuses, ont vu
 leur complexité largement diminuer grâce à la mise en place d'outils
@@ -85,18 +85,19 @@ dues à la conversion de la ressource en énergie (p.e. AC/DC) ou les
 coûts de communication dans des architectures multiprocesseurs. 
 L'énergie reçue par une activité nous permet de savoir quand
 l'activité est terminée, i.e. quand elle a reçue une quantité
-suffisante d'énergie.  
+suffisante d'énergie. 
 
 Pour le problème cumulatif et le problème d'ordonnancement de projet
 avec contraintes de ressource, différentes techniques permettant de
-trouver des solutions ont été mises en place dans la littérature. Ces techniques utilisent
-des concepts et théories pouvant être très variés. Cependant, deux de
-celles figurant parmi les plus utilisées demeurent les techniques issues
-de la programmation par contraintes et de la programmation linéaire
-mixte (ou en nombres entiers). En effet, ces techniques se sont
-révélées très efficace dans le processus de résolution de ces deux
-problèmes. Ce sont quelques unes de ces méthodes que nous nous
-proposons d'étendre au problème considéré dans cette thèse.
+trouver des solutions ont été mises en place dans la littérature. Ces
+techniques utilisent des concepts et théories pouvant être très
+variés. Cependant, deux de celles figurant parmi les plus utilisées
+demeurent les techniques issues de la programmation par contraintes et
+de la programmation linéaire mixte (ou en nombres entiers). En effet,
+ces techniques se sont révélées très efficace dans le processus de
+résolution de ces deux problèmes. Ce sont quelques unes de ces
+méthodes que nous nous proposons d'étendre au problème considéré dans
+cette thèse.
 
 Le plan de la thèse est le suivant: 
 \begin{itemize}
@@ -131,7 +132,13 @@ d'un certain nombre de propriétés remarquables satisfaites par ce problème.
   paragraphe~\ref{sec:TT_CECSP}). Le paragraphe~\ref{sec:ER_CECSP} est
   consacré à l'adaptation du raisonnement énergétique. Pour ce
   raisonnement, nous présentons plusieurs méthodes permettant de
-  caractériser les intervalles sur lesquels appliquer ce raisonnement.
+  caractériser les intervalles sur lesquels appliquer ce
+  raisonnement. Nous attirons ici l'attention du lecteur sur
+  l'utilisation du terme {\it énergie}. En effet, dans ce manuscrit
+  nous utiliserons à la fois ce terme pour le raisonnement
+  énergétique (algorithme de filtrage pour la contrainte cumulative)
+  mais aussi dans un problème qui modélise des ressources énergétiques
+  telles que l'électricité.
 \item les chapitres~\ref{sec:PLNE_RCPSP} et~\ref{sec:PLNE_CECSP}
   présentent les techniques de résolution issues de la programmation
   linéaire mixte. Dans un premier temps, nous décrivons les concepts généraux
