--- a/main_file.tex
+++ b/main_file.tex
@@ -20,7 +20,7 @@
  \setcounter{bottomnumber}{1}
 
 \hyphenation{ordon-nan-ce-ment}
-
+\hyphenation{con-train-tes}
 \title{\textbf{\large Ordonnancement sous contraintes d'énergie}}
 \author{Margaux NATTAF}
 \defencedate{18/10/2016}
