--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -14,25 +14,24 @@
     \hrule
     \vspace{0.5cm}
     {\it  La première partie de cette thèse est consacrée à la présentation de
-    la problématique et de son contexte générale. Nous commençons donc,
+    la problématique et de son contexte général. Nous commençons donc,
     dans un premier temps, par définir les principales caractéristiques
     d'un problème d'ordonnancement et plus précisément des problèmes
-    d'ordonnancement à contrainte de ressource. Pour ces derniers,
+    d'ordonnancement à contraintes de ressource. Pour ces derniers,
     deux exemples de tels problèmes sont présentés: le problème
-    d'ordonnancement de projet à contraintes de ressource et le
+    d'ordonnancement de projet à contraintes de ressource et une de ses relaxations, le
     problème cumulatif. En effet, plusieurs techniques de résolution
     adaptées de celles définies pour ces problèmes seront présentées
     dans cette thèse. 
 
-    La suite du manuscrit discute les limitations de ces problèmes
+    La suite du manuscrit discute des limitations de ces problèmes
     et présente une nouvelle modélisation permettant de pallier ces
     dernières: le problème d'ordonnancement continu à contraintes
     énergétiques~\cite{ArtiguesLopez,Nattaf_ORSpectrum,Nattaf_Constraints}. Ce
     problème est ensuite comparé aux modélisations préexistantes afin de
-    montrer la pertinence de celui-ci. De plus, les différences entre ce
-    problème et les modélisations détaillées dans ce manuscrit ne
-    permettent pas l'application directe des techniques de résolution
-    utilisées pour ces dernières.
+    montrer la pertinence de celui-ci et de souligner que l'application
+    directe des techniques de résolution de ces modélisations à ce
+    problème n'est pas possible.
 
     Enfin, la fin de cette partie est dédiée à la présentation des
     principales propriétés du problème d'ordonnancement continu à
