--- a/part2/PPC.tex
+++ b/part2/PPC.tex
@@ -36,27 +36,27 @@
       l'adaptation de deux raisonnements simples: le Time-Table et le
       raisonnement disjonctif. Ces deux raisonnements s'adaptent 
       naturellement au cas du \CECSP~en considérant les activités
-      rectangulaires de durée maximale ou de consommation
-      minimale. Sur le même principe, nous adaptons un des
-      raisonnements étendus pour la contrainte cumulative: le 
+      rectangulaires de durée ou de consommation
+      maximale. Sur le même principe, nous adaptons un des
+      raisonnements étendus récemment proposé pour la contrainte cumulative: le 
       Time-Table disjonctif~\cite{Gay2015}. Un nouveau raisonnement
       basé sur le Time-Table et couplé avec un modèle de flots est
       aussi présenté~\cite{Nattaf_CPDP}.
 
       Le dernier paragraphe du chapitre~\ref{sec:PPC_CECSP} est
-      consacré à l'adaptation d'un des raisonnements  le plus fort défini pour la
+      consacré à l'adaptation d'un des raisonnements les plus forts définis pour la
       contrainte cumulative: le raisonnement énergétique. Pour ce
       raisonnement, nous montrons comment adapter les calculs de
-      consommation minimale dans le cadre du \CECSP. De plus, trois
-      méthodes permettant de calculer les intervalles sur lesquels
-      appliquer le raisonnement énergétique (pour l'algorithme de
-      vérification et les ajustements) sont présentées. 
+      consommation minimale dans le cadre du \CECSP~ et qu'il existe
+      un nombre polynomial d'intervalles suffisants pour appliquer le
+      raisonnement de manière complète. De plus, trois 
+      méthodes permettant de calculer ces intervalles pour les algorithmes de
+      vérification et d'ajustement sont présentées. 
 
       Les résultats sur le raisonnement énergétique ont été publiés
       dans~\cite{Nattaf_CPDP,Nattaf_Constraints,Nattaf_ORSpectrum}.
 
-      Afin d'assurer la cohérence du manuscrit et par souci de
-      longueur, certains travaux préliminaires ne sont pas présentés
+      Afin d'assurer la cohérence du manuscrit, certains travaux préliminaires ne sont pas présentés
       dans ce manuscrit. C'est le cas, par exemple, du modèle de PPC
       pour le \CECSP~à temps discret présenté
       dans~\cite{Nattaf_JFPC}. Pour plus de précisions, nous invitons
