--- a/part2/conclusion.tex
+++ b/part2/conclusion.tex
@@ -27,7 +27,7 @@ adapté au \CECSP~est le raisonnement énergétique. En effet,
 l'adaptation d'un raisonnement pour la contrainte cumulative dans le
 cas du \CECSP~est généralement beaucoup moins fort. De ce fait, nous
 avons choisi de commencer par adapter un des raisonnements les plus
-forts au \CECSP. Pour ce raisonnement, nous avons aussi appliqué au
+forts au \CECSP. Pour ce raisonnement, nous avons aussi étendu au
 cas du \CECSP~les travaux de Derrien {\it et al.}~\cite{DP} pour la
 contrainte cumulative, ce qui a permis de prouver la polynomialité de
 ce raisonnement dans le cadre du \CECSP. De plus, deux autres
@@ -37,9 +37,9 @@ des segments de définition des fonctions de consommation individuelle
 des activités.
 
 D'autres adaptations des raisonnements cumulatifs sont aussi
-détaillés. Ces raisonnements s'adapte aisément au cas du \CECSP. Ils
+détaillés. Ces raisonnements s'adaptent aisément au cas du \CECSP. Ils
 restent cependant beaucoup moins puissants en terme de déduction que
-leur homologues cumulatifs. De ce fait, un nouvel algorithme de
+leurs homologues cumulatifs. De ce fait, un nouvel algorithme de
 vérification couplant un programme linéaire adapté d'un problème de
 flot et le raisonnement Time-Table est présenté. Ce raisonnement
 n'étant pas dominé par le raisonnement énergétique peut être couplé
