--- a/part3/CECSP/conclusion.tex
+++ b/part3/CECSP/conclusion.tex
@@ -17,4 +17,7 @@ améliorations.
 Des résultats numériques évaluant les performances de ces formulations
 ainsi que l'intérêt de chaque amélioration sur diverses instances du
 \CECSP~et du \RCPSP~feront l'objet d'un paragraphe dans le chapitre
-portant sur les expérimentations (cf. Chapitre~\ref{sec:expe}). 
+portant sur les expérimentations (cf. Chapitre~\ref{sec:expe}). De
+plus, un algorithme permettant de séparer les inégalités de
+non-préemption en temps polynomial sera également détaillé dans ce
+chapitre. 
