--- a/part3/CECSP/modele_CECSP.tex
+++ b/part3/CECSP/modele_CECSP.tex
@@ -210,7 +210,7 @@ x_{i\tau}-\sum_{\tau=\ES+1}^t y_{i\tau}\right) \quad \forall t\in
 
 Cette contrainte nous permet de modéliser la fonction de rendement
 $f_i,\ \forall i \in \A$. En effet, $\left(\sum_{\tau=\ES}^t
-x_{i\tau}-\sum_{\tau=\ES+1}^t y_{i\tau}\right) $ est égale à $1$ si et
+x_{i\tau}\right.$ $\left.-\sum_{\tau=\ES+1}^t y_{i\tau}\right) $ est égale à $1$ si et
 seulement si l'activité $i$ est en cours à l'instant $t$.  Dans ce
 cas-là, la valeur de l'énergie apportée à $i$ est bien
 $w_{it}=a_ib_{it}+c_i$. Le second cas se produit quand l'activité $i$
