--- a/part3/conclusion.tex
+++ b/part3/conclusion.tex
@@ -7,16 +7,16 @@ modèles pour un problème d'ordonnancement à contraintes de ressource:
 le \RCPSP. Pour ce problème, plusieurs types de modèles ont été
 présentés et, pour chacun d'eux, nous avons discuté leurs avantages et
 inconvénients. Les modèles indexés par le temps sont plus performants
-sur des instances ayant de petits horizon de temps tandis que les
+sur des instances ayant de petits horizons de temps tandis que les
 modèles à événements s'avèrent plus efficaces sur des instances
-disposant de plus grands horizon de temps. 
+disposant de plus grands horizons de temps. 
 
-Ces deux types de modèles ont ensuite été adaptés pour être appliquer
+Ces deux types de modèles ont ensuite été adaptés pour être appliqués 
 au \CECSP. Pour ce problème, en plus des avantages décrits ci-dessus,
 les modèles à événements disposent d'un avantage supplémentaire. En
 effet, pour le \CECSP, il est possible qu'une instance ne possède que
-des solutions rationnelles et ce même si cette dernière est seulement
-pourvu de données entières. Les modèles indexés par le temps ne
+des solutions rationnelles et ce, même si cette dernière est seulement
+pourvue de données entières. Les modèles indexés par le temps ne
 permettent d'obtenir que des solutions à date de début et fin
 d'activités entières. A l'inverse, les modèles à événements permettant
 d'obtenir des solutions non entières, sont donc plus adaptés au cas du
@@ -24,20 +24,20 @@ d'obtenir des solutions non entières, sont donc plus adaptés au cas du
 renforcement de ces modèles par le biais de l'ajout de coupes et
 d'inégalités valides. De plus, nous avons montré qu'un de ces
 ensembles d'inégalités permettait de décrire exactement l'enveloppe
-convexes des vecteurs binaires solutions du modèle. 
+convexe des vecteurs binaires solutions d'une partie des contraintes du modèle.
 
 Des inégalités valides pour le modèle indexé par le temps ont aussi
 été décrites. Ces inégalités sont directement déduites d'un algorithme
 présenté dans la partie dédiée à la programmation par contrainte de
 ce manuscrit: le raisonnement énergétique. Dans la continuité de ces
-travaux, d'autres raisonnements issues de la programmation par
+travaux, d'autres raisonnements issus de la programmation par
 contraintes pourraient être envisagés afin de déduire des ensembles
-d'inégalités pouvant être ajoutés au modèles (indexé par le temps ou à
-événements). De plus, les modèles présentées souffrent d'un grand
-nombre de symétrie. Ces dernières pourraient être éviter par l'ajout
-de nouvelles contraintes. La définition de telle contraintes ainsi
+d'inégalités pouvant être ajoutées aux modèles (indexé par le temps ou à
+événements). De plus, les modèles présentés souffrent d'un grand
+nombre de symétries. Ces dernières pourraient être évitées par l'ajout
+de nouvelles contraintes. La définition de telles contraintes ainsi
 qu'une étude du polyèdre associé fait aussi partie des poursuites de
 recherche sur ce sujet. La dernière perspective dans ce domaine
-seraient l'établissement de nouveaux modèles indexés par le temps, il
-en existe beaucoup d'autres pour le \RCPSP, ou le mise en place de
+serait l'établissement de nouveaux modèles indexés par le temps, il
+en existe beaucoup d'autres pour le \RCPSP, ou la mise en place de
 nouvelles formulations étendues.
