--- a/annexe/Annexe.tex
+++ b/annexe/Annexe.tex
@@ -14,44 +14,33 @@
   \begin{minipage}{\textwidth}
     \hrule
     \vspace{0.5cm}
-    {\it  La première partie de cette thèse est consacrée à la présentation de
-    la problématique et de son contexte générale. Nous commençons donc,
-    dans un premier temps, par définir les principales caractéristiques
-    d'un problème d'ordonnancement et plus précisément des problèmes
-    d'ordonnancement à contrainte de ressource. Pour ces derniers,
-    deux exemples de tels problèmes sont présentés: le problème
-    d'ordonnancement de projet à contraintes de ressource et le
-    problème cumulatif. En effet, plusieurs techniques de résolution
-    adaptées de celles définies pour ces problèmes seront présentées
-    dans cette thèse. 
+    {\it  Cette partie, contenant les annexes de ce manuscrit, présente des
+      travaux réalisés pendant la thèse mais pas assez aboutis ou trop
+      éloignés du sujet de ce manuscrit pour y figurer à part
+      entière. Cette partie se divise en deux sous-parties. La
+      première correspond à l'annexe~\ref{ann:JFPC}~\ref{ann:JFPC} et
+      présente l'étude du cas discret du problème d'ordonnancement
+      continu à contraintes énergétiques (article publié aux
+      Journées Francophones de la Programmation par
+      Contraintes~\cite{Nattaf_JFPC}). Ce paragraphe présente
+      nottament un modèle de programmation par contraintes pour la
+      restriction discrète du problème.
 
-    La suite du manuscrit discute les limitations de ces problèmes
-    et présente une nouvelle modélisation permettant de pallier ces
-    dernières: le problème d'ordonnancement continu à contraintes
-    énergétiques~\cite{ArtiguesLopez,Nattaf_ORSpectrum,Nattaf_Constraints}. Ce
-    problème est ensuite comparé aux modélisations préexistantes afin de
-    montrer la pertinence de celui-ci. De plus, les différences entre ce
-    problème et les modélisations détaillées dans ce manuscrit ne
-    permettent pas l'application directe des techniques de résolution
-    utilisées pour ces dernières.
-
-    Enfin, la fin de cette partie est dédiée à la présentation des
-    principales propriétés du problème d'ordonnancement continu à
-    contraintes énergétiques. Après avoir prouvé la NP-complétude de ce
-    problème dans le cas général, nous montrons que, même dans le cas où
-    tous les paramètres du problème sont entiers, l'ensemble des solutions
-    peut ne comporter que des valeurs fractionnaires. Nous prouvons
-    ensuite que, dans certains cas particuliers, l'ensemble des instants
-    pour lesquels la ressource doit être réallouée peut être
-    restreint aux dates de début et de fin des activités. Ceci nous
-    permettra, dans un premier temps, de décrire des cas particuliers
-    de ce problème solvable en temps polynomial. Cette propriété sera
-    ensuite utilisée pour définir des méthodes de résolution dans les
-    parties suivantes de cette thèse. 
-
-    Les propriétés définies dans le paragraphe~\ref{sec:ppte_CECSP}
-    ont été publiées
-    dans~\cite{Nattaf_ORSpectrum,Nattaf_Constraints,Nattaf_CPDP}.} 
+      La seconde annexe (ann.~\ref{ann:IESM}) porte sur la mise en place d'une
+      matheuristique pour un problème industriel d'ordonnancement avec
+      contraintes et objectifs énergétiques. Ce travail s'inscrit dans
+      le cadre d'une collaboration pour un projet franco-chilien et a
+      été publié dans la conférence IESM (International Conference on
+      Industrial Engineering and Systems
+      Management~\cite{Nattaf_IESM}). Ce paragraphe présente tout
+      d'abord le problème étudié, puis, dans un second temps, trois
+      modèles de programmation linéaire sont introduits. Les deux
+      premiers, constituant des méthodes de résolution exacte,
+      comportent un nombre de variables et de contraintes trop
+      important pour expérer les résoudre en temps raisonnable. De ce
+      fait, un troisième modèle simplifié est présenté et la solution
+      de ce modèle est utilisée comme solution de base des modèles
+      exacts.}   
     \vspace{0.5cm}
     \hrule
   \end{minipage}
