--- a/part1/conclusion.tex
+++ b/part1/conclusion.tex
@@ -8,7 +8,7 @@ présenté deux des principaux problèmes étudiés en ordonnancement sous
 contraintes de ressource: le \RCPSP~et le \CUSP. Les limitations de
 ces problèmes en termes de modélisation d'activités à profils
 variables ont ensuite été démontrées et une nouvelle modélisation de
-la consommation de ressource nous a permis de définir un nouveau
+la consommation de ressource nous a permis de présenter un nouveau
 problème: le \CECSP. 
 
 Dans un premier temps, nous avons comparé ce problème avec les
@@ -16,20 +16,21 @@ problèmes existant dans la littérature. Cette comparaison nous a
 permis de montrer que les techniques de résolution existantes ne
 pouvaient pas s'appliquer directement dans le cadre du \CECSP. De
 plus, le profil variable de consommation de la ressource rendaient la
-résolution de ce problème délicates. En effet, dans le cas général, la
-quantité de ressource allouée à une activité peut varier à tout
-moment ce qui accroît la difficulté de résolution. 
+résolution de ce problème a priori délicate. En effet, dans le cas
+général, la quantité de ressource allouée à une activité peut varier à
+tout moment ce qui accroît la difficulté de résolution puisque
+l'inconnue est une fonction de $\mathbb{R}$ dans $\mathbb{R}$. 
 
-Nous avons donc défini un ensemble de propriétés permettant de
+Nous avons pu définir un ensemble de propriétés permettant de
 faciliter le résolution du \CECSP. Dans le cas général, ce problème
 est NP-complet mais il existe des cas particuliers pour lequel ce
 problème est polynomial. C'est le cas, par exemple, de la version
 préemptive du \CECSP. De plus, nous avons montré que, dans le cas où
 l'on considère des fonctions de rendement concaves, la fonction
 d'allocation de ressource est une fonction constante par morceaux et
-que ces points de rupture correspondent aux dates de début et de fin
+que ses points de rupture correspondent aux dates de début et de fin
 des activités. Cette propriété nous permet de définir des méthodes de
-résolution pour le \CECSP et aussi d'adapter plusieurs méthodes
+résolution pour le \CECSP~et aussi d'adapter plusieurs méthodes
 existantes définies pour d'autres problèmes. Ces méthodes peuvent être
 classées en deux catégories: 
 \begin{itemize}
